--- a/custom_components/oilprice/manifest.json
+++ b/custom_components/oilprice/manifest.json
@@ -2,10 +2,10 @@
   "domain": "oilprice",
   "name": "oilprice",
   "config_flow": true,
-  "version": "0.0.2",
+  "version": "v1.0.0",
   "documentation": "https://github.com/yyned2501/oilprice",
   "issue_tracker": "https://github.com/yyned2501/oilprice/issues",
   "dependencies": [],
-  "codeowners": ["@yy"],
+  "codeowners": ["@yyned2501"],
   "requirements": ["requests", "beautifulsoup4"]
 }
